Gallery: fix image height on small chromium based screens

--- a/static/styles/components/wp-block-gallery.scss
+++ b/static/styles/components/wp-block-gallery.scss
@@ -80,6 +80,7 @@
   }
 
   img {
+    height: auto;
     max-height: 80vh;
     max-width: 100%;
     object-fit: contain;
