--- a/static/styles/components/wp-block-more.scss
+++ b/static/styles/components/wp-block-more.scss
@@ -30,10 +30,11 @@
     flex: 0 0 3rem;
     height: auto;
     max-height: 100%;
-    transform: translateY(-25%);
+    transform: translateY(-20%);
 
     @include mq($from: tablet) {
       flex-basis: 4rem;
+      transform: translateY(-25%);
     }
   }
 
